syntax = "proto3";

package evm.tokens.prices.uniswap.v2.types.v1;

message Events {
  repeated Swap swaps = 1;
  repeated Sync syncs = 2;
  repeated PairCreated pairs_created = 3;
}

message PairCreated {
  // -- transaction --
  bytes transaction_id = 1;

  // -- log --
  bytes address = 5; // log.address (factory)

  // -- ordering --
  uint64 ordinal = 10; // log.ordinal
  uint64 index = 11; // relative index
  uint64 global_sequence = 12; // latest global sequence (block_num << 32 + index)

  // -- pool created --
  bytes token0 = 20;
  bytes token1 = 21;
  bytes pair = 22;
}

message Sync {
  // -- transaction --
  bytes transaction_id = 1;

  // -- log --
  bytes address = 5;

  // -- ordering --
  uint64 ordinal = 10; // log.ordinal
  uint64 index = 11; // relative index
  uint64 global_sequence = 12; // latest global sequence (block_num << 32 + index)

  // -- sync --
  string reserve0 = 20; // uint112
  string reserve1 = 21; // uint112
}

message Swap {
  // -- transaction --
  bytes transaction_id = 1;

  // -- log --
  bytes address = 5; // log.address

  // -- ordering --
  uint64 ordinal = 10; // log.ordinal
  uint64 index = 11; // relative index
  uint64 global_sequence = 12; // latest global sequence (block_num << 32 + index)

  // -- swap --
  string amount0_in = 20; // uint256
  string amount0_out = 21; // uint256
  string amount1_in = 22; // uint256
  string amount1_out = 23; // uint256
  bytes sender = 24;
  bytes to = 25;
}
